k8s/apps/landing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing
  namespace: matflixlab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: matflixlab.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing
            port:
              number: 80
  - host: www.matflixlab.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing
            port:
              number: 80
